[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/environment/main_environment.tres" type="Environment" id=2]
[ext_resource path="res://game/state/map_grid.gd" type="Script" id=3]
[ext_resource path="res://game/gui/3d/map_viewer/map_viewer.gd" type="Script" id=4]

[sub_resource type="Resource" id=1]
script = ExtResource( 3 )
scale_grid_to_noise = 5.0
terrain_height_max = 35.0
terrain_style = "Core's Edge"
map_size = 65
noise_seed = 6

[node name="MapViewer" type="CenterContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
map_grid = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 261.0
margin_top = 170.0
margin_right = 762.0
margin_bottom = 429.0

[node name="ViewportContainer" type="ViewportContainer" parent="HBoxContainer"]
margin_right = 250.0
margin_bottom = 259.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="HBoxContainer/ViewportContainer"]
size = Vector2( 250, 250 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="HBoxContainer/ViewportContainer/Viewport"]
transform = Transform( 0.222637, -0.844289, 0.487451, 0, 0.5, 0.866026, -0.974901, -0.19281, 0.111319, 62.872, 41, 38.052 )
environment = ExtResource( 2 )
fov = 95.0

[node name="SettingsGrid" type="GridContainer" parent="HBoxContainer"]
margin_left = 254.0
margin_right = 501.0
margin_bottom = 259.0
custom_constants/vseparation = 16
custom_constants/hseparation = 10
columns = 2

[node name="TerrainStyle" type="MarginContainer" parent="HBoxContainer/SettingsGrid"]
margin_right = 143.0
margin_bottom = 99.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SettingsGrid/TerrainStyle"]
margin_right = 143.0
margin_bottom = 99.0

[node name="Label" type="Label" parent="HBoxContainer/SettingsGrid/TerrainStyle/VBoxContainer"]
margin_right = 143.0
margin_bottom = 14.0
text = "Terrain Style:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="HBoxContainer/SettingsGrid/TerrainStyle/VBoxContainer"]
margin_top = 18.0
margin_right = 143.0
margin_bottom = 81.0
size_flags_horizontal = 3
items = [ "Core's Edge", null, false, "The Rim Eternal", null, false, "The Voidlands", null, false ]
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TerrainSize" type="MarginContainer" parent="HBoxContainer/SettingsGrid"]
margin_left = 153.0
margin_right = 247.0
margin_bottom = 99.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SettingsGrid/TerrainSize"]
margin_right = 94.0
margin_bottom = 99.0

[node name="Label" type="Label" parent="HBoxContainer/SettingsGrid/TerrainSize/VBoxContainer"]
margin_right = 94.0
margin_bottom = 14.0
text = "Terrain Size:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="HBoxContainer/SettingsGrid/TerrainSize/VBoxContainer"]
margin_top = 18.0
margin_right = 94.0
margin_bottom = 99.0
items = [ "Small (64x64)", null, false, "Medium (128x128)", null, false, "Large (256x256)", null, true, "Humongous (512x512)", null, true ]
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RandomSeed" type="MarginContainer" parent="HBoxContainer/SettingsGrid"]
margin_top = 115.0
margin_right = 143.0
margin_bottom = 181.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SettingsGrid/RandomSeed"]
margin_right = 143.0
margin_bottom = 66.0

[node name="Label3" type="Label" parent="HBoxContainer/SettingsGrid/RandomSeed/VBoxContainer"]
margin_right = 143.0
margin_bottom = 14.0
text = "Terrain Seed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeedSpinbox" type="SpinBox" parent="HBoxContainer/SettingsGrid/RandomSeed/VBoxContainer"]
margin_top = 18.0
margin_right = 143.0
margin_bottom = 42.0
min_value = -5000.0
max_value = 5000.0
align = 2

[node name="Button" type="Button" parent="HBoxContainer/SettingsGrid/RandomSeed/VBoxContainer"]
margin_top = 46.0
margin_right = 143.0
margin_bottom = 66.0
text = "Randomize"

[node name="Control" type="Control" parent="HBoxContainer/SettingsGrid"]
margin_left = 153.0
margin_top = 115.0
margin_right = 247.0
margin_bottom = 181.0

[node name="VSeparator" type="HSeparator" parent="HBoxContainer/SettingsGrid"]
margin_top = 197.0
margin_right = 143.0
margin_bottom = 201.0

[node name="VSeparator2" type="HSeparator" parent="HBoxContainer/SettingsGrid"]
margin_left = 153.0
margin_top = 197.0
margin_right = 247.0
margin_bottom = 201.0

[node name="NoiseScale" type="MarginContainer" parent="HBoxContainer/SettingsGrid"]
margin_top = 217.0
margin_right = 143.0
margin_bottom = 259.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SettingsGrid/NoiseScale"]
margin_right = 143.0
margin_bottom = 42.0

[node name="Label4" type="Label" parent="HBoxContainer/SettingsGrid/NoiseScale/VBoxContainer"]
margin_right = 143.0
margin_bottom = 14.0
text = "Scale Noise to Terrain:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScaleSpinbox" type="SpinBox" parent="HBoxContainer/SettingsGrid/NoiseScale/VBoxContainer"]
margin_top = 18.0
margin_right = 143.0
margin_bottom = 42.0
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.3
align = 2

[node name="MountainHeight" type="MarginContainer" parent="HBoxContainer/SettingsGrid"]
margin_left = 153.0
margin_top = 217.0
margin_right = 247.0
margin_bottom = 259.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SettingsGrid/MountainHeight"]
margin_right = 94.0
margin_bottom = 42.0

[node name="Label2" type="Label" parent="HBoxContainer/SettingsGrid/MountainHeight/VBoxContainer"]
margin_right = 94.0
margin_bottom = 14.0
text = "Terrain Height:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="HBoxContainer/SettingsGrid/MountainHeight/VBoxContainer"]
margin_top = 18.0
margin_right = 94.0
margin_bottom = 42.0
min_value = 5.0
max_value = 50.0
value = 5.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
